[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/npc_guide.gd" type="Script" id=1]
[ext_resource path="res://imgs/npc/guida.png" type="Texture" id=2]
[ext_resource path="res://imgs/player/shadow.png" type="Texture" id=3]
[ext_resource path="res://scenes/enemy_particles.tscn" type="PackedScene" id=4]
[ext_resource path="res://imgs/texts/HamletOrNot.ttf" type="DynamicFontData" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.51488
height = 9.74952

[sub_resource type="CircleShape2D" id=2]
radius = 40.0003

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("sprite:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("sprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 2.71045, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.01, 0.93, 1.94 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("shadow:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.992305, -0.25, 0, 0.25, 0, 1.22816, -0.25, 0, 0.25, 0, 0.992305, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.16, 1.09, 1.94 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("shadow:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.26805 )
}

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 5 )

[node name="npc_guide" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="enemy_hit" type="CollisionShape2D" parent="."]
position = Vector2( -0.35849, 31.1074 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="npc_guide" type="Area2D" parent="."]
position = Vector2( 0, 31.1366 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="npc_guide"]
position = Vector2( 0, -0.166718 )
shape = SubResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2
region_rect = Rect2( 0, 0, 64, 64 )

[node name="eye1" type="Sprite" parent="sprite"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -6.99448, -9.76881 )
texture = ExtResource( 2 )
offset = Vector2( 1, 0 )
hframes = 2
frame = 1

[node name="eye2" type="Sprite" parent="sprite"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 7.10839, -10 )
texture = ExtResource( 2 )
offset = Vector2( 1, 0 )
hframes = 2
frame = 1

[node name="shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 0, 31.1682 )
scale = Vector2( 0.992305, 1 )
texture = ExtResource( 3 )

[node name="death_particle" parent="." instance=ExtResource( 4 )]
show_behind_parent = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -69.0
margin_right = 67.0
margin_bottom = -32.0
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_top = 3.0
margin_right = 19.0
margin_bottom = 33.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "E "
align = 1

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 23.0
margin_top = 1.0
margin_right = 128.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 6 )
text = " to interact"

[connection signal="tree_entered" from="." to="." method="_on_enemy_tree_entered"]
[connection signal="area_entered" from="npc_guide" to="." method="_on_npc_guide_area_entered"]
[connection signal="area_exited" from="npc_guide" to="." method="_on_npc_guide_area_exited"]
